jilles      2007/02/08 21:59:55 UTC	(20070208-7609)
  Log:
  Clean up header files, integrating the old libatheme a bit better.
  

  Changes:	Modified:
  +2 -100	trunk/include/atheme.h (File Modified) 
  +4 -0		trunk/include/common.h (File Modified) 
  +20 -0	trunk/include/global.h (File Modified) 
  +73 -1	trunk/include/tools.h (File Modified) 


jilles      2007/02/08 20:30:43 UTC	(20070208-7599)
  Log:
  Log at LG_INFO level: channel succession, channel deletion due
  to no eligible channel succession and account/nick/channel expiry.
  

  Changes:	Modified:
  +20 -0	trunk/src/account.c (File Modified) 


jilles      2007/02/07 23:31:36 UTC	(20070207-7591)
  Log:
  Rerun autoheader (for socklen_t change).
  

  Changes:	Modified:
  +0 -3		trunk/include/sysconf.h.in (File Modified) 


jilles      2007/02/07 17:05:23 UTC	(20070207-7587)
  Log:
  Add more information about serverinfo::name.
  

  Changes:	Modified:
  +3 -1		trunk/dist/example.conf (File Modified) 


jilles      2007/02/07 01:36:35 UTC	(20070207-7585)
  Log:
  Exit atheme if atheme.db cannot be opened for reading
  for any reason other than it not existing, to avoid
  overwriting it with an empty database later.
  Clarify the error message.
  

  Changes:	Modified:
  +11 -2	trunk/modules/backend/flatfile.c (File Modified) 


jilles      2007/02/06 23:06:16 UTC	(20070206-7583)
  Log:
  Check uplink{} server name and log error messages if it
  is invalid; for now, accept the uplink block anyway since
  the name is currently not much more than an identifier in
  logfiles and /stats c.
  

  Changes:	Modified:
  +7 -0		trunk/src/conf.c (File Modified) 


jilles      2007/02/06 15:45:39 UTC	(20070206-7581)
  Log:
  Make a usage message more consistent.
  

  Changes:	Modified:
  +1 -1		trunk/src/atheme.c (File Modified) 


jilles      2007/02/06 14:39:51 UTC	(20070206-7579)
  Log:
  os_logonnews: use DATADIR
  

  Changes:	Modified:
  +3 -3		trunk/contrib/os_logonnews.c (File Modified) 

