@@ -4,10 +4,11 @@
  *
  * Connection and I/O management.
  *
- * $Id: connection.c 7467 2007-01-14 03:25:42Z nenolod $
+ * $Id: connection.c 7613 2007-02-08 22:09:15Z jilles $
  */
 
 #include "atheme.h"
+#include "internal.h"
 
 static BlockHeap *sa_heap;
 static BlockHeap *connection_heap;
